[tool.poetry]
name = "oakx-grape"
version = "0.1.0"
description = "oakx-grape"
authors = ["Harshad Hegde <hhegde@lbl.gov>"]
license = "BSD 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tox = "^3.25.1"
click = "^8.1.3"
importlib = "^1.0.4"
oaklib = "^0.1.43"
grape = "^0.1.23"
scipy = "^1.9.0"
ensmallen = "0.8.28"
bioregistry = "<0.5.135"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.19.2"
sphinx-click = "^4.3.0"
black = "^22.10.0"

[tool.poetry.scripts]
oakx-grape = "oakx_grape.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    ]

[tool.poetry.plugins."oaklib.plugins"]
grape = "oakx_grape.grape_implementation:GrapeImplementation"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
