[tool.poetry]
name = "oakx-grape"
version = "0.1.1"
description = "oakx-grape"
authors = ["Harshad Hegde <hhegde@lbl.gov>"]
license = "BSD 3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
bioregistry = "^0.5.136"
tox = "^3.25.1"
click = "^8.1.3"
importlib = "^1.0.4"
scipy = "^1.9.0"
oaklib = "^0.1.43"
grape = "*"
sphinx = {version = "^5.3.0", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
sphinx-click = {version = "^4.3.0", extras = ["docs"]}
myst-parser = {version = "^0.18.1", extras = ["docs"]}
furo = {version = "^2022.9.29", extras = ["docs"]}
fastobo = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
oakx-grape = "oakx_grape.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser",
    "furo"
    ]

[tool.poetry.plugins."oaklib.plugins"]
grape = "oakx_grape.grape_implementation:GrapeImplementation"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
